odhargo/odhargo/base/deployment-workflow-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
spec:
  selector:
    matchLabels:
      app: workflow-controller
  template:
    metadata:
      labels:
        app: workflow-controller
    spec:
      containers:
      - args:
        - --configmap
        - workflow-controller-configmap
        - --executor-image
        - argoproj/argoexec:v2.7.0
        - --namespaced
        command:
        - workflow-controller
        image: argoproj/workflow-controller:v2.7.0
        name: workflow-controller
      serviceAccountName: argo
