odhargo/odhargo/base/service-argo-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
spec:
  ports:
  - port: 2746
    targetPort: 2746
  selector:
    app: argo-server
