odhargo/odhargo/base/argo-server-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: argo-server
spec:
  to:
    kind: Service
    name: argo-server
  port:
    targetPort: web
