odhargo/odhargo/base/portal-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: argo-portal
  namespace: opendatahub
spec:
  to:
    kind: Service
    name: argo-server
  port:
    targetPort: 2746
